docs/envoy/v1.39.1/_sources/api-v3/extensions/filters/http/oauth2/v3/oauth.proto.rst.txt
.. _envoy_v3_api_file_envoy/extensions/filters/http/oauth2/v3/oauth.proto:

OAuth (proto)
=============

.. _extension_envoy.filters.http.oauth2:

This extension has the qualified name ``envoy.filters.http.oauth2``


.. note::
  

  This extension is intended to be robust against untrusted downstream traffic. It
  assumes that the upstream is trusted.

.. tip::
  This extension extends and can be used with the following extension category:


  - :ref:`envoy.filters.http <extension_category_envoy.filters.http>`



  This extension must be configured with one of the following type URLs:



  - :ref:`type.googleapis.com/envoy.extensions.filters.http.oauth2.v3.OAuth2 <envoy_v3_api_msg_extensions.filters.http.oauth2.v3.OAuth2>`


  - :ref:`type.googleapis.com/envoy.extensions.filters.http.oauth2.v3.OAuth2PerRoute <envoy_v3_api_msg_extensions.filters.http.oauth2.v3.OAuth2PerRoute>`



OAuth :ref:`configuration overview <config_http_filters_oauth>`.





.. _envoy_v3_api_msg_extensions.filters.http.oauth2.v3.CookieConfig:

extensions.filters.http.oauth2.v3.CookieConfig
----------------------------------------------


:repo:`[extensions.filters.http.oauth2.v3.CookieConfig proto] <api/envoy/extensions/filters/http/oauth2/v3/oauth.proto#L29>`

OAuth cookie configuration attributes.




.. code-block:: json
  :force:

  {
    "same_site": ...,
    "path": ...,
    "partitioned": ...
  }

.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.CookieConfig.same_site:


same_site
  (:ref:`extensions.filters.http.oauth2.v3.CookieConfig.SameSite <envoy_v3_api_enum_extensions.filters.http.oauth2.v3.CookieConfig.SameSite>`) The value used for the SameSite cookie attribute.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.CookieConfig.path:


path
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The path attribute for the cookie.

  This controls the scope of the cookie and is useful for path-based routing scenarios
  where different logical boundaries or applications may operate with different OAuth2 clients.
  The CSRF cookie (nonce cookie) can be configured with a different path than session cookies
  to support flows where the callback URL is on a different path.

  If not specified, defaults to ``/``.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.CookieConfig.partitioned:


partitioned
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If true, the ``Partitioned`` attribute will be set on the cookie.

  Modern browsers (Firefox, Chrome with third-party cookie deprecation) warn or block
  "foreign" cookies unless they carry the ``Partitioned`` attribute alongside ``SameSite=None; Secure``.
  When Envoy is used in a gateway/IdP flow that sets OAuth/OIDC cookies for a parent domain
  (e.g., ``Domain=.example.com``) while running on a different host, those cookies are
  considered third-party and will be rejected without ``Partitioned``.

  See `CHIPS <https://developers.google.com/privacy-sandbox/3pcd/chips>`_ for more information.

  Default is false.


.. _envoy_v3_api_enum_extensions.filters.http.oauth2.v3.CookieConfig.SameSite:

Enum extensions.filters.http.oauth2.v3.CookieConfig.SameSite
------------------------------------------------------------


:repo:`[extensions.filters.http.oauth2.v3.CookieConfig.SameSite proto] <api/envoy/extensions/filters/http/oauth2/v3/oauth.proto#L30>`




.. _envoy_v3_api_enum_value_extensions.filters.http.oauth2.v3.CookieConfig.SameSite.DISABLED:


DISABLED
  *(DEFAULT)* ⁣

.. _envoy_v3_api_enum_value_extensions.filters.http.oauth2.v3.CookieConfig.SameSite.STRICT:


STRICT
  ⁣

.. _envoy_v3_api_enum_value_extensions.filters.http.oauth2.v3.CookieConfig.SameSite.LAX:


LAX
  ⁣

.. _envoy_v3_api_enum_value_extensions.filters.http.oauth2.v3.CookieConfig.SameSite.NONE:


NONE
  ⁣



.. _envoy_v3_api_msg_extensions.filters.http.oauth2.v3.CookieConfigs:

extensions.filters.http.oauth2.v3.CookieConfigs
-----------------------------------------------


:repo:`[extensions.filters.http.oauth2.v3.CookieConfigs proto] <api/envoy/extensions/filters/http/oauth2/v3/oauth.proto#L65>`




.. code-block:: json
  :force:

  {
    "bearer_token_cookie_config": {...},
    "oauth_hmac_cookie_config": {...},
    "oauth_expires_cookie_config": {...},
    "id_token_cookie_config": {...},
    "refresh_token_cookie_config": {...},
    "oauth_nonce_cookie_config": {...},
    "code_verifier_cookie_config": {...}
  }

.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.CookieConfigs.bearer_token_cookie_config:


bearer_token_cookie_config
  (:ref:`extensions.filters.http.oauth2.v3.CookieConfig <envoy_v3_api_msg_extensions.filters.http.oauth2.v3.CookieConfig>`) Configuration for the bearer token cookie.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.CookieConfigs.oauth_hmac_cookie_config:


oauth_hmac_cookie_config
  (:ref:`extensions.filters.http.oauth2.v3.CookieConfig <envoy_v3_api_msg_extensions.filters.http.oauth2.v3.CookieConfig>`) Configuration for the OAuth HMAC cookie.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.CookieConfigs.oauth_expires_cookie_config:


oauth_expires_cookie_config
  (:ref:`extensions.filters.http.oauth2.v3.CookieConfig <envoy_v3_api_msg_extensions.filters.http.oauth2.v3.CookieConfig>`) Configuration for the OAuth expires cookie.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.CookieConfigs.id_token_cookie_config:


id_token_cookie_config
  (:ref:`extensions.filters.http.oauth2.v3.CookieConfig <envoy_v3_api_msg_extensions.filters.http.oauth2.v3.CookieConfig>`) Configuration for the ID token cookie.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.CookieConfigs.refresh_token_cookie_config:


refresh_token_cookie_config
  (:ref:`extensions.filters.http.oauth2.v3.CookieConfig <envoy_v3_api_msg_extensions.filters.http.oauth2.v3.CookieConfig>`) Configuration for the refresh token cookie.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.CookieConfigs.oauth_nonce_cookie_config:


oauth_nonce_cookie_config
  (:ref:`extensions.filters.http.oauth2.v3.CookieConfig <envoy_v3_api_msg_extensions.filters.http.oauth2.v3.CookieConfig>`) Configuration for the OAuth nonce cookie.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.CookieConfigs.code_verifier_cookie_config:


code_verifier_cookie_config
  (:ref:`extensions.filters.http.oauth2.v3.CookieConfig <envoy_v3_api_msg_extensions.filters.http.oauth2.v3.CookieConfig>`) Configuration for the code verifier cookie.



.. _envoy_v3_api_msg_extensions.filters.http.oauth2.v3.OAuth2Credentials:

extensions.filters.http.oauth2.v3.OAuth2Credentials
---------------------------------------------------


:repo:`[extensions.filters.http.oauth2.v3.OAuth2Credentials proto] <api/envoy/extensions/filters/http/oauth2/v3/oauth.proto#L89>`




.. code-block:: json
  :force:

  {
    "client_id": ...,
    "token_secret": {...},
    "hmac_secret": {...},
    "cookie_names": {...},
    "cookie_domain": ...
  }

.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Credentials.client_id:


client_id
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The client_id to be used in the authorize calls. This value will be URL encoded when sent to the OAuth server.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Credentials.token_secret:


token_secret
  (:ref:`extensions.transport_sockets.tls.v3.SdsSecretConfig <envoy_v3_api_msg_extensions.transport_sockets.tls.v3.SdsSecretConfig>`) The secret used to retrieve the access token. This value will be URL encoded when sent to the OAuth server.
  This field is required unless :ref:`auth_type <envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.auth_type>`
  is set to ``TLS_CLIENT_AUTH``, in which case authentication is done via the client certificate.
  When ``auth_type`` is ``PRIVATE_KEY_JWT``, this field must contain the PEM-encoded private key
  used to sign the JWT client assertion.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Credentials.hmac_secret:


hmac_secret
  (:ref:`extensions.transport_sockets.tls.v3.SdsSecretConfig <envoy_v3_api_msg_extensions.transport_sockets.tls.v3.SdsSecretConfig>`, *REQUIRED*) If present, the secret token will be a HMAC using the provided secret.


  Configures how the secret token should be created.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Credentials.cookie_names:


cookie_names
  (:ref:`extensions.filters.http.oauth2.v3.OAuth2Credentials.CookieNames <envoy_v3_api_msg_extensions.filters.http.oauth2.v3.OAuth2Credentials.CookieNames>`) The cookie names used in OAuth filters flow.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Credentials.cookie_domain:


cookie_domain
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The domain to set the cookie on. If not set, the cookie will default to the host of the request, not including the subdomains.
  This is useful when token cookies need to be shared across multiple subdomains.


.. _envoy_v3_api_msg_extensions.filters.http.oauth2.v3.OAuth2Credentials.CookieNames:

extensions.filters.http.oauth2.v3.OAuth2Credentials.CookieNames
---------------------------------------------------------------


:repo:`[extensions.filters.http.oauth2.v3.OAuth2Credentials.CookieNames proto] <api/envoy/extensions/filters/http/oauth2/v3/oauth.proto#L91>`




.. code-block:: json
  :force:

  {
    "bearer_token": ...,
    "oauth_hmac": ...,
    "oauth_expires": ...,
    "id_token": ...,
    "refresh_token": ...,
    "oauth_nonce": ...,
    "code_verifier": ...
  }

.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Credentials.CookieNames.bearer_token:


bearer_token
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Cookie name to hold OAuth bearer token value. When the authentication server validates the
  client and returns an authorization token back to the OAuth filter, no matter what format
  that token is, if :ref:`forward_bearer_token <envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.forward_bearer_token>`
  is set to true the filter will send over the bearer token as a cookie with this name to the
  upstream. Defaults to ``BearerToken``.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Credentials.CookieNames.oauth_hmac:


oauth_hmac
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Cookie name to hold OAuth HMAC value. Defaults to ``OauthHMAC``.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Credentials.CookieNames.oauth_expires:


oauth_expires
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Cookie name to hold OAuth expiry value. Defaults to ``OauthExpires``.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Credentials.CookieNames.id_token:


id_token
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Cookie name to hold the id token. Defaults to ``IdToken``.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Credentials.CookieNames.refresh_token:


refresh_token
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Cookie name to hold the refresh token. Defaults to ``RefreshToken``.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Credentials.CookieNames.oauth_nonce:


oauth_nonce
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Cookie name to hold the nonce value. Defaults to ``OauthNonce``.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Credentials.CookieNames.code_verifier:


code_verifier
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Cookie name to hold the PKCE code verifier. Defaults to ``OauthCodeVerifier``.




.. _envoy_v3_api_msg_extensions.filters.http.oauth2.v3.PrivateKeyJwtConfig:

extensions.filters.http.oauth2.v3.PrivateKeyJwtConfig
-----------------------------------------------------


:repo:`[extensions.filters.http.oauth2.v3.PrivateKeyJwtConfig proto] <api/envoy/extensions/filters/http/oauth2/v3/oauth.proto#L154>`

Configuration for ``PRIVATE_KEY_JWT`` client authentication (RFC 7523).



.. code-block:: json
  :force:

  {
    "signing_algorithm": ...,
    "assertion_lifetime": {...}
  }

.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.PrivateKeyJwtConfig.signing_algorithm:


signing_algorithm
  (:ref:`extensions.filters.http.oauth2.v3.PrivateKeyJwtConfig.SigningAlgorithm <envoy_v3_api_enum_extensions.filters.http.oauth2.v3.PrivateKeyJwtConfig.SigningAlgorithm>`) The signing algorithm to use for the JWT assertion.
  The private key provided in ``token_secret`` must match the algorithm family: an RSA key for
  the ``RS*`` algorithms, or an EC key for the ``ES*`` algorithms.
  Default: ``RS256``.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.PrivateKeyJwtConfig.assertion_lifetime:


assertion_lifetime
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) The lifetime of the JWT assertion. After this duration, the assertion expires.
  The value is truncated to whole seconds, so it must be at least ``1s`` when set.
  Default: ``60s``.


.. _envoy_v3_api_enum_extensions.filters.http.oauth2.v3.PrivateKeyJwtConfig.SigningAlgorithm:

Enum extensions.filters.http.oauth2.v3.PrivateKeyJwtConfig.SigningAlgorithm
---------------------------------------------------------------------------


:repo:`[extensions.filters.http.oauth2.v3.PrivateKeyJwtConfig.SigningAlgorithm proto] <api/envoy/extensions/filters/http/oauth2/v3/oauth.proto#L156>`

Supported JWT signing algorithms for the client assertion.



.. _envoy_v3_api_enum_value_extensions.filters.http.oauth2.v3.PrivateKeyJwtConfig.SigningAlgorithm.RS256:


RS256
  *(DEFAULT)* ⁣``RSASSA-PKCS1-v1_5`` using SHA-256.


.. _envoy_v3_api_enum_value_extensions.filters.http.oauth2.v3.PrivateKeyJwtConfig.SigningAlgorithm.RS384:


RS384
  ⁣``RSASSA-PKCS1-v1_5`` using SHA-384.


.. _envoy_v3_api_enum_value_extensions.filters.http.oauth2.v3.PrivateKeyJwtConfig.SigningAlgorithm.RS512:


RS512
  ⁣``RSASSA-PKCS1-v1_5`` using SHA-512.


.. _envoy_v3_api_enum_value_extensions.filters.http.oauth2.v3.PrivateKeyJwtConfig.SigningAlgorithm.ES256:


ES256
  ⁣ECDSA using P-256 and SHA-256.


.. _envoy_v3_api_enum_value_extensions.filters.http.oauth2.v3.PrivateKeyJwtConfig.SigningAlgorithm.ES384:


ES384
  ⁣ECDSA using P-384 and SHA-384.


.. _envoy_v3_api_enum_value_extensions.filters.http.oauth2.v3.PrivateKeyJwtConfig.SigningAlgorithm.ES512:


ES512
  ⁣ECDSA using P-521 and SHA-512.




.. _envoy_v3_api_msg_extensions.filters.http.oauth2.v3.OAuth2TokenForwarding:

extensions.filters.http.oauth2.v3.OAuth2TokenForwarding
-------------------------------------------------------


:repo:`[extensions.filters.http.oauth2.v3.OAuth2TokenForwarding proto] <api/envoy/extensions/filters/http/oauth2/v3/oauth.proto#L189>`

Defines how an OAuth token is forwarded upstream.



.. code-block:: json
  :force:

  {
    "header": ...
  }

.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2TokenForwarding.header:


header
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The upstream request header that will carry the token.
  Pseudo-headers (names starting with ``:``) and the ``Host`` header are not allowed.



.. _envoy_v3_api_msg_extensions.filters.http.oauth2.v3.PostLogoutRedirectUri:

extensions.filters.http.oauth2.v3.PostLogoutRedirectUri
-------------------------------------------------------


:repo:`[extensions.filters.http.oauth2.v3.PostLogoutRedirectUri proto] <api/envoy/extensions/filters/http/oauth2/v3/oauth.proto#L199>`

Configuration for the ``post_logout_redirect_uri`` parameter used in OpenID Connect
`RP-Initiated Logout requests <https://openid.net/specs/openid-connect-rpinitiated-1_0.html>`_.
This configuration is ignored if ``end_session_endpoint`` is not set.



.. code-block:: json
  :force:

  {
    "disabled": ...,
    "uri": ...
  }

.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.PostLogoutRedirectUri.disabled:


disabled
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Do not include the ``post_logout_redirect_uri`` parameter in requests to the
  configured ``end_session_endpoint``.


  

  Precisely one of :ref:`disabled <envoy_v3_api_field_extensions.filters.http.oauth2.v3.PostLogoutRedirectUri.disabled>`, :ref:`uri <envoy_v3_api_field_extensions.filters.http.oauth2.v3.PostLogoutRedirectUri.uri>` must be set.

.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.PostLogoutRedirectUri.uri:


uri
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) URI to send as the ``post_logout_redirect_uri`` parameter. Supports header formatting
  tokens, and will be percent-encoded automatically when building the logout URL.

  The URI should be registered with the authorization server.


  

  Precisely one of :ref:`disabled <envoy_v3_api_field_extensions.filters.http.oauth2.v3.PostLogoutRedirectUri.disabled>`, :ref:`uri <envoy_v3_api_field_extensions.filters.http.oauth2.v3.PostLogoutRedirectUri.uri>` must be set.


.. _envoy_v3_api_msg_extensions.filters.http.oauth2.v3.OAuth2Config:

extensions.filters.http.oauth2.v3.OAuth2Config
----------------------------------------------


:repo:`[extensions.filters.http.oauth2.v3.OAuth2Config proto] <api/envoy/extensions/filters/http/oauth2/v3/oauth.proto#L218>`

OAuth config




.. code-block:: json
  :force:

  {
    "token_endpoint": {...},
    "retry_policy": {...},
    "authorization_endpoint": ...,
    "end_session_endpoint": ...,
    "post_logout_redirect_uri": {...},
    "credentials": {...},
    "redirect_uri": ...,
    "redirect_path_matcher": {...},
    "signout_path": {...},
    "forward_bearer_token": ...,
    "forward_id_token": {...},
    "preserve_authorization_header": ...,
    "pass_through_matcher": [],
    "auth_scopes": [],
    "resources": [],
    "auth_type": ...,
    "use_refresh_token": {...},
    "default_expires_in": {...},
    "deny_redirect_matcher": [],
    "default_refresh_token_expires_in": {...},
    "disable_id_token_set_cookie": ...,
    "disable_access_token_set_cookie": ...,
    "disable_refresh_token_set_cookie": ...,
    "cookie_configs": {...},
    "stat_prefix": ...,
    "csrf_token_expires_in": {...},
    "code_verifier_token_expires_in": {...},
    "disable_token_encryption": ...,
    "allow_failed_matcher": [],
    "original_request_uri": ...,
    "allowed_redirect_domains": [],
    "use_access_token_expiry_for_id_token_cookie": ...,
    "private_key_jwt_config": {...}
  }

.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.token_endpoint:


token_endpoint
  (:ref:`config.core.v3.HttpUri <envoy_v3_api_msg_config.core.v3.HttpUri>`) Endpoint on the authorization server to retrieve the access token from.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.retry_policy:


retry_policy
  (:ref:`config.core.v3.RetryPolicy <envoy_v3_api_msg_config.core.v3.RetryPolicy>`) Specifies the retry policy for requests to the OAuth server. If not specified, then no retries will be performed.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.authorization_endpoint:


authorization_endpoint
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The endpoint redirect to for authorization in response to unauthorized requests.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.end_session_endpoint:


end_session_endpoint
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The endpoint at the authorization server to request the user be logged out of the Authorization server.
  This field is optional and should be set only if openid is in the auth_scopes and the authorization server
  supports the OpenID Connect RP-Initiated Logout specification.
  For more information, see https://openid.net/specs/openid-connect-rpinitiated-1_0.html

  If configured, the OAuth2 filter will redirect users to this endpoint when they access the signout_path.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.post_logout_redirect_uri:


post_logout_redirect_uri
  (:ref:`extensions.filters.http.oauth2.v3.PostLogoutRedirectUri <envoy_v3_api_msg_extensions.filters.http.oauth2.v3.PostLogoutRedirectUri>`) Optional control for the ``post_logout_redirect_uri`` parameter sent to the ``end_session_endpoint`` when a user
  accesses the ``signout_path``.
  This field should be set only if ``openid`` is in the ``auth_scopes``, the ``end_session_endpoint`` is configured,
  and the authorization server supports the OpenID Connect RP-Initiated Logout specification.

  If unset, Envoy preserves the historical behavior and sends ``<scheme>://<host>/``, constructed from the inbound
  request, as ``post_logout_redirect_uri``.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.credentials:


credentials
  (:ref:`extensions.filters.http.oauth2.v3.OAuth2Credentials <envoy_v3_api_msg_extensions.filters.http.oauth2.v3.OAuth2Credentials>`, *REQUIRED*) Credentials used for OAuth.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.redirect_uri:


redirect_uri
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The redirect URI passed to the authorization endpoint. Supports header formatting
  tokens. For more information, including details on header value syntax, see the
  documentation on :ref:`custom request headers <config_http_conn_man_headers_custom_request_headers>`.

  This URI should not contain any query parameters.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.redirect_path_matcher:


redirect_path_matcher
  (:ref:`type.matcher.v3.PathMatcher <envoy_v3_api_msg_type.matcher.v3.PathMatcher>`, *REQUIRED*) Matching criteria used to determine whether a path appears to be the result of a redirect from the authorization server.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.signout_path:


signout_path
  (:ref:`type.matcher.v3.PathMatcher <envoy_v3_api_msg_type.matcher.v3.PathMatcher>`, *REQUIRED*) The path to sign a user out, clearing their credential cookies.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.forward_bearer_token:


forward_bearer_token
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Forward the OAuth token as a Bearer to upstream web service.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.forward_id_token:


forward_id_token
  (:ref:`extensions.filters.http.oauth2.v3.OAuth2TokenForwarding <envoy_v3_api_msg_extensions.filters.http.oauth2.v3.OAuth2TokenForwarding>`) Forward the OIDC ID token to the upstream.

  If the configured header is ``Authorization``, Envoy forwards the ID token using the
  ``Bearer`` prefix. For any other header, Envoy forwards the raw token value.
  If not specified, the ID token will not be forwarded.

  This can not be configured with :ref:`forward_bearer_token
  <envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.forward_bearer_token>`
  or :ref:`preserve_authorization_header
  <envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.preserve_authorization_header>`
  when the header is ``Authorization``.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.preserve_authorization_header:


preserve_authorization_header
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If set to true, preserve the existing authorization header.
  By default the client strips the existing authorization header before forwarding upstream.
  Can not be set to true if forward_bearer_token is already set to true.
  Default value is false.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.pass_through_matcher:


pass_through_matcher
  (**repeated** :ref:`config.route.v3.HeaderMatcher <envoy_v3_api_msg_config.route.v3.HeaderMatcher>`) Any request that matches any of the provided matchers will be passed through without OAuth validation.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.auth_scopes:


auth_scopes
  (**repeated** `string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Optional list of OAuth scopes to be claimed in the authorization request. If not specified,
  defaults to "user" scope.
  OAuth RFC https://tools.ietf.org/html/rfc6749#section-3.3


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.resources:


resources
  (**repeated** `string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Optional resource parameter for authorization request
  RFC: https://tools.ietf.org/html/rfc8707


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.auth_type:


auth_type
  (:ref:`extensions.filters.http.oauth2.v3.OAuth2Config.AuthType <envoy_v3_api_enum_extensions.filters.http.oauth2.v3.OAuth2Config.AuthType>`) Defines how ``client_id`` and ``client_secret`` are sent in OAuth client to OAuth server requests.
  RFC https://datatracker.ietf.org/doc/html/rfc6749#section-2.3.1


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.use_refresh_token:


use_refresh_token
  (`BoolValue <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#boolvalue>`_) If set to true, allows automatic access token refresh using the associated refresh token (see
  `RFC 6749 section 6 <https://datatracker.ietf.org/doc/html/rfc6749#section-6>`_), provided that the OAuth server supports that.
  Default value is true.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.default_expires_in:


default_expires_in
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) The default lifetime in seconds of the access token, if omitted by the authorization server.

  If this value is not set, it will default to ``0s``. In this case, the expiry must be set by
  the authorization server or the OAuth flow will fail.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.deny_redirect_matcher:


deny_redirect_matcher
  (**repeated** :ref:`config.route.v3.HeaderMatcher <envoy_v3_api_msg_config.route.v3.HeaderMatcher>`) Any request that matches any of the provided matchers won't be redirected to OAuth server when tokens are not valid.
  Automatic access token refresh will be performed for these requests, if enabled.
  This behavior can be useful for AJAX requests.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.default_refresh_token_expires_in:


default_refresh_token_expires_in
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) The default lifetime in seconds of the refresh token, if the exp (expiration time) claim is omitted in the refresh token or the refresh token is not JWT.

  If this value is not set, it will default to ``604800s``. In this case, the cookie with the refresh token will be expired
  in a week.
  This setting is only considered if ``use_refresh_token`` is set to true, otherwise the authorization server expiration or ``default_expires_in`` is used.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.disable_id_token_set_cookie:


disable_id_token_set_cookie
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If set to true, the client will not set a cookie for ID Token even if one is received from the Identity Provider. This may be useful in cases where the ID
  Token is too large for HTTP cookies (longer than 4096 characters). Enabling this option will only disable setting the cookie response header, the filter
  will still process incoming ID Tokens as part of the HMAC if they are there. This is to ensure compatibility while switching this setting on. Future
  sessions would not set the IdToken cookie header.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.disable_access_token_set_cookie:


disable_access_token_set_cookie
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If set to true, the client will not set a cookie for Access Token even if one is received from the Identity Provider.
  Enabling this option will only disable setting the cookie response header, the filter
  will still process incoming Access Tokens as part of the HMAC if they are there. This is to ensure compatibility while switching this setting on. Future
  sessions would not set the Access Token cookie header.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.disable_refresh_token_set_cookie:


disable_refresh_token_set_cookie
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If set to true, the client will not set a cookie for Refresh Token even if one is received from the Identity Provider.
  Enabling this option will only disable setting the cookie response header, the filter
  will still process incoming Refresh Tokens as part of the HMAC if they are there. This is to ensure compatibility while switching this setting on. Future
  sessions would not set the Refresh Token cookie header.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.cookie_configs:


cookie_configs
  (:ref:`extensions.filters.http.oauth2.v3.CookieConfigs <envoy_v3_api_msg_extensions.filters.http.oauth2.v3.CookieConfigs>`) Controls for attributes that can be set on the cookies.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.stat_prefix:


stat_prefix
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Optional additional prefix to use when emitting statistics.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.csrf_token_expires_in:


csrf_token_expires_in
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) Optional expiration time for the CSRF protection token cookie.
  The CSRF token prevents cross-site request forgery attacks during the OAuth2 flow.
  If not specified, defaults to ``600s`` (10 minutes), which should provide sufficient time
  for users to complete the OAuth2 authorization flow.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.code_verifier_token_expires_in:


code_verifier_token_expires_in
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) Optional expiration time for the code verifier cookie.
  The code verifier is stored in a secure, HTTP-only cookie during the OAuth2 authorization process.
  If not specified, defaults to ``600s`` (10 minutes), which should provide sufficient time
  for users to complete the OAuth2 authorization flow.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.disable_token_encryption:


disable_token_encryption
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Disable token encryption. When set to true, both the access token and the ID token will be stored in plain text.
  This option should only be used in secure environments where token encryption is not required.
  Default is false (tokens are encrypted).


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.allow_failed_matcher:


allow_failed_matcher
  (**repeated** :ref:`config.route.v3.HeaderMatcher <envoy_v3_api_msg_config.route.v3.HeaderMatcher>`) Any request that matches any of the provided matchers will be allowed to continue to upstream
  even if OAuth validation fails (missing, invalid, or expired credentials).
  This is useful for services that can handle both authenticated and unauthenticated requests,
  enabling graceful degradation patterns.

  When triggered, all OAuth cookies are stripped from the request and the request proceeds as unauthenticated.
  Context headers ``x-envoy-oauth-status: failed`` and ``x-envoy-oauth-failure-reason`` are added to inform upstream.

  Note: If a request matches pass_through_matcher, it bypasses OAuth validation and this matcher won't be evaluated.
  This matcher takes precedence over deny_redirect_matcher.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.original_request_uri:


original_request_uri
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Optional base URI (scheme + host, e.g. ``https://app.example.com``) used to build the
  original request URI that is encoded into the OAuth2 ``state`` parameter.
  This URI will be used later to redirect users on a successful OAuth.

  This is useful when Envoy sits behind a gateway or load balancer that terminates the
  user-facing hostname: In that case, the post-authentication redirect derived from ``state`` would
  send the user to an internal host they didn't request.

  Supports request header formatting tokens.

  Example:

     original_request_uri: "%REQ(x-forwarded-proto?:scheme)%://%REQ(x-forwarded-host?:authority)%"

  If not set, defaults to ``<:scheme>://<:authority>`` of the incoming request.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.allowed_redirect_domains:


allowed_redirect_domains
  (**repeated** `string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Optional list of domains that are allowed as
  1. redirect_uri: which is what the IdP calls after OAuth
  2. original_request_uri: the one extracted from the state of an OAuth callback (where should the request go after OAuth)

  This mitigates:
  - injecting a malicious x-forwarded-host or any header that is used to template the redirect urls
  - open redirect attacks where an attacker crafts a ``state`` value pointing to an untrusted host.

  Each entry is matched against the host (with any port stripped) extracted from the
  formatted ``redirect_uri``, the formatted ``original_request_uri``, and the URL decoded from
  the ``state`` parameter on callback. Matching is case-insensitive and supports two forms:

  * Exact match, e.g. ``example.com`` matches only ``example.com``.
  * Wildcard subdomain match using a leading ``*.``, e.g. ``*.example.com`` matches
    ``foo.example.com`` and ``bar.baz.example.com`` but not ``example.com`` itself.

  IPv6 literals must be configured without surrounding brackets (e.g. ``::1``, not ``[::1]``).

  If this list is empty (the default), all hosts are allowed and no validation is performed.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.use_access_token_expiry_for_id_token_cookie:


use_access_token_expiry_for_id_token_cookie
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If set to true, the expiration time for the ID token cookie will always be derived from the
  ``expires_in`` field of the access token response rather than from the ``exp`` claim in the
  ID token JWT. This is useful when the access token response advertises a longer lifetime than
  the ID token and you want the ID token cookie to remain valid for that full duration.
  Default is false (use the ID token's own ``exp`` claim when available).


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.private_key_jwt_config:


private_key_jwt_config
  (:ref:`extensions.filters.http.oauth2.v3.PrivateKeyJwtConfig <envoy_v3_api_msg_extensions.filters.http.oauth2.v3.PrivateKeyJwtConfig>`) Configuration for ``PRIVATE_KEY_JWT`` client authentication.
  Only used when :ref:`auth_type <envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.auth_type>`
  is set to ``PRIVATE_KEY_JWT``.


.. _envoy_v3_api_enum_extensions.filters.http.oauth2.v3.OAuth2Config.AuthType:

Enum extensions.filters.http.oauth2.v3.OAuth2Config.AuthType
------------------------------------------------------------


:repo:`[extensions.filters.http.oauth2.v3.OAuth2Config.AuthType proto] <api/envoy/extensions/filters/http/oauth2/v3/oauth.proto#L219>`




.. _envoy_v3_api_enum_value_extensions.filters.http.oauth2.v3.OAuth2Config.AuthType.URL_ENCODED_BODY:


URL_ENCODED_BODY
  *(DEFAULT)* ⁣The ``client_id`` and ``client_secret`` will be sent in the URL encoded request body.
  This type should only be used when Auth server does not support Basic authentication.


.. _envoy_v3_api_enum_value_extensions.filters.http.oauth2.v3.OAuth2Config.AuthType.BASIC_AUTH:


BASIC_AUTH
  ⁣The ``client_id`` and ``client_secret`` will be sent using HTTP Basic authentication scheme.


.. _envoy_v3_api_enum_value_extensions.filters.http.oauth2.v3.OAuth2Config.AuthType.TLS_CLIENT_AUTH:


TLS_CLIENT_AUTH
  ⁣The client will be authenticated using mutual TLS (mTLS) with a client certificate.
  The ``client_secret`` is not required and will not be sent in the request to the
  authorization server.
  The client certificate must be configured in the cluster used by ``token_endpoint`` via
  transport socket configuration.
  This implements OAuth 2.0 Mutual-TLS Client Authentication as defined in RFC 8705.


.. _envoy_v3_api_enum_value_extensions.filters.http.oauth2.v3.OAuth2Config.AuthType.PRIVATE_KEY_JWT:


PRIVATE_KEY_JWT
  ⁣The client authenticates using a signed JWT assertion (RFC 7523).
  The ``token_secret`` in credentials must contain the PEM-encoded private key used to sign the assertion.
  The JWT assertion is sent as ``client_assertion`` in the token request body along with
  ``client_assertion_type=urn:ietf:params:oauth:client-assertion-type:jwt-bearer``.




.. _envoy_v3_api_msg_extensions.filters.http.oauth2.v3.OAuth2PerRoute:

extensions.filters.http.oauth2.v3.OAuth2PerRoute
------------------------------------------------


:repo:`[extensions.filters.http.oauth2.v3.OAuth2PerRoute proto] <api/envoy/extensions/filters/http/oauth2/v3/oauth.proto#L455>`

Per-route OAuth2 config.

This message supplies an OAuth2Config for the matched route.
It overrides the filter-level config for requests matching the route.
If neither the global config nor a per-route config is specified, OAuth2 is disabled for the route.



.. code-block:: json
  :force:

  {
    "config": {...}
  }

.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2PerRoute.config:


config
  (:ref:`extensions.filters.http.oauth2.v3.OAuth2Config <envoy_v3_api_msg_extensions.filters.http.oauth2.v3.OAuth2Config>`, *REQUIRED*) Full OAuth2 config for this route.



.. _envoy_v3_api_msg_extensions.filters.http.oauth2.v3.OAuth2:

extensions.filters.http.oauth2.v3.OAuth2
----------------------------------------


:repo:`[extensions.filters.http.oauth2.v3.OAuth2 proto] <api/envoy/extensions/filters/http/oauth2/v3/oauth.proto#L461>`

Filter config.



.. code-block:: json
  :force:

  {
    "config": {...}
  }

.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2.config:


config
  (:ref:`extensions.filters.http.oauth2.v3.OAuth2Config <envoy_v3_api_msg_extensions.filters.http.oauth2.v3.OAuth2Config>`) The OAuth2 filter config.


